[metadata]
name = firebolt_sdk
version = attr: firebolt.__version__
description = Python SDK for Firebolt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-db/firebolt-sdk
author = Firebolt
author_email = support@firebolt.io
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/firebolt-db/firebolt-sdk/issues

[options]
packages = find:
install_requires =
    aiorwlock==1.1.0
    appdirs>=1.4.4
    appdirs-stubs>=0.1.0
    async-property==0.2.1
    cryptography>=3.4.0
    httpx[http2]==0.21.3
    pydantic[dotenv]==1.8.2
    readerwriterlock==1.0.9
    sqlparse>=0.4.2
python_requires = >=3.7
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
ciso8601 =
    ciso8601==2.2.0
dev =
    devtools==0.7.0
    mypy==0.910
    pre-commit==2.15.0
    pyfakefs>=4.5.3
    pytest==6.2.5
    pytest-asyncio
    pytest-cov==3.0.0
    pytest-httpx==0.18.0
    pytest-mock==3.6.1
    pytest-timeout==2.1.0
    pytest-xdist==2.5.0
    types-cryptography==3.3.18

[options.package_data]
firebolt = py.typed

[mypy]
plugins = pydantic.mypy
disallow_untyped_defs = True
show_error_codes = True
files = src/

[pydantic-mypy]
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[flake8]
exclude = tests/*
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore =
    E203, # Whitespace before ':'. Ignored for black compatibility
    W503, # Line break occurred before a binary operator. Ignored for black compatibility
    D100, # Missing docstring in public module
    D104, # Missing docstring in public package
    D105,# Missing docstring in magic method
    D107, # Missing docstring in __init__
    SC200, # Spelling error in name (e.g. variable, function, class)
ban-relative-imports = True
docstring-convention = google
inline-quotes = "
