[metadata]
name = firebolt_sdk
version = attr: firebolt.__version__
description = Python SDK for Firebolt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-db/firebolt-sdk
author = Firebolt
author_email = support@firebolt.io
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Bug Tracker = https://github.com/firebolt-db/firebolt-sdk/issues

[options]
packages = find:
install_requires =
    aiorwlock==1.5.0
    anyio>=3.7.1
    appdirs>=1.4.4
    appdirs-stubs>=0.1.0
    async-generator>=1.10
    async-property>=0.2.1
    cryptography>=3.4.0
    httpcore>=0.17.0
    httpx[http2]>=0.19.0
    pydantic[dotenv]>=1.8.2,<3.0.0
    python-dateutil>=2.8.2
    readerwriterlock>=1.0.9
    sqlparse>=0.4.2
    trio>=0.22.0
    truststore>=0.10;python_version>="3.10"
python_requires = >=3.9
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
ciso8601 =
    ciso8601==2.3.3
dev =
    allure-pytest==2.*
    devtools==0.12.2
    mypy>=1,<2
    pre-commit==3.5.0
    psutil==7.0.0
    pyfakefs>=4.5.3,<=5.6.0
    pytest==8.4.1
    pytest-cov==3.0.0
    pytest-httpx>=0.13.0
    pytest-mock==3.15.1
    pytest-timeout==2.1.0
    pytest-trio==0.8.0
    pytest-xdist==2.5.0
    trio-typing[mypy]>=0.6,<0.11
    types-cryptography==3.3.18
docs =
    sphinx==7.*
    sphinx-rtd-theme==2.*

[options.package_data]
firebolt = py.typed

[mypy]
disallow_untyped_defs = True
show_error_codes = True
files = src/
plugins = pydantic.mypy

[flake8]
exclude = tests/*
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore =
    E203, # Whitespace before ':'. Ignored for black compatibility
    W503, # Line break occurred before a binary operator. Ignored for black compatibility
    D100, # Missing docstring in public module
    D104, # Missing docstring in public package
    D105,# Missing docstring in magic method
    D107, # Missing docstring in __init__
    SC200, # Spelling error in name (e.g. variable, function, class)
ban-relative-imports = True
docstring-convention = google
inline-quotes = "

[tool:pytest]
trio_mode = true
